--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,16 +22,16 @@ spring.datasource.hikari.auto-commit=true
 
 
 # first db
-spring.datasource.jdbc-url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=1
-#spring.datasource.driverClassName = oracle.jdbc.OracleDriver
+spring.datasource.first.jdbc-url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.first.username=postgres
+spring.datasource.first.password=1
+#spring.datasource.first.driverClassName = oracle.jdbc.OracleDriver
 
 #second db ...
-spring.second-datasource.url=jdbc:postgresql://localhost:5432/test
-spring.second-datasource.username = postgres
-spring.second-datasource.password = 1
-#spring.second-datasource.driverClassName = oracle.jdbc.OracleDriver
+spring.datasource.second.jdbc-url=jdbc:postgresql://localhost:5432/test
+spring.datasource.second.username = postgres
+spring.datasource.second.password = 1
+#spring.datasource.second.driverClassName = oracle.jdbc.OracleDriver
 
 
 
