--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,92 +1,1 @@
-spring.main.allow-bean-definition-overriding=true
-logging.level.com.lguplus.fleta=INFO
-
-#server.contextPath=/swagger2-demo
-############################
-## DATASOURCE & JPA
-############################
-# Maximum number of milliseconds that a client will wait for a connection
-spring.datasource.hikari.connection-timeout=20000
-# Minimum number of idle connections maintained by HikariCP in a connection pool
-spring.datasource.hikari.minimum-idle=10
-# Maximum pool size
-spring.datasource.hikari.maximum-pool-size=10
-# Maximum idle time for connection
-spring.datasource.hikari.idle-timeout=10000
-# Maximum lifetime in milliseconds of a connection in the pool after it is closed.
-spring.datasource.hikari.max-lifetime=1000
-# Default auto-commit behavior.
-spring.datasource.hikari.auto-commit=true
-
-#spring.datasource.jdbc-url=jdbc:postgresql://megapostgresql.cluster-cojldwm5j4cg.ap-northeast-2.rds.amazonaws.com:5432/mylgdb
-
-
-# first db
-spring.datasource.jdbc-url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=1
-#spring.datasource.driverClassName = oracle.jdbc.OracleDriver
-
-#second db ...
-spring.second-datasource.url=jdbc:postgresql://localhost:5432/test
-spring.second-datasource.username = postgres
-spring.second-datasource.password = 1
-#spring.second-datasource.driverClassName = oracle.jdbc.OracleDriver
-
-
-
-spring.sql.init.platform=postgres
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-spring.jpa.mapping-resources=META-INF/orm/orm.xml,META-INF/orm/series.orm.xml
-
-
-
-
-
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-spring.jpa.database=postgresql
-spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql="false"
-logging.level.org.hibernate.SQL=INFO
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
-
-
-############################
-## KAFKA
-############################
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-#spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.bootstrap-servers=b-2.demo-cluster-4.xw3ka1.c2.kafka.ap-northeast-2.amazonaws.com:9092,b-1.demo-cluster-4.xw3ka1.c2.kafka.ap-northeast-2.amazonaws.com:9092
-#spring.kafka.producer.bootstrap-servers=${spring.kafka.bootstrap-servers}
-
-# custom
-kafka.topic.order-event=order_event_3
-kafka.topic.delivery-event=delivery_event_3
-
-kafka.topic.album-event=album_event
-kafka.topic.platform-event=platform_event
-
-############################
-## HTTP
-############################
-media.subscriber-mgmt.base-url=http://localhost:8081
-media.watching-query-auth.base-url=http://localhost:8082
-media.purchase.base-url=http://localhost:8083
-
-media.subscriber-mgmt.enable=true
-media.watching-query-auth.enable=false
-media.purchase.base-url.enable=false
-
-
-############################
-## REDIS
-############################
-redis.usage.enable=true
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.timeout=3000
-
+spring.profiles.active=local
